--- a/sub/sub02.html
+++ b/sub/sub02.html
@@ -54,7 +54,7 @@ a.header-tel{border:3px solid #ffd02c;
 	<div class="wrapper-inner">
 
 		<header>
-			<h1 class="comp-name">인천퀵서비스</h1>  
+			<h1 class="comp-name">고양시퀵서비스</h1>  
 			<div class="clear"> </div>
 			<div class="logo">
 				<a href="../index.html" title="HOME">
