--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ a.header-tel{border:3px solid #ffd02c;
 			<h1 class="comp-name">고양퀵서비스</h1>  
 			<div class="clear"> </div>
 			<div class="logo">
-				<a href="index.html" title="HOME">
+				<a href="/" title="HOME">
 					<img src="images/logo.png" alt="LOGO" />
 				</a>
 			</div><!-- /.logo -->
 
-			<a href="tel:1661-4262 " class="header-tel" title="1661-4262 전화걸기"><img src="images/phone.png">1661-4262</a> 
+			<a href="tel:1661-4262 " class="header-tel" title="1661-4262 전화걸기"><img src="images/phone.png" alt="전화번호">1661-4262</a> 
 			<div class="clear"> </div>
 			<div class="nav">
 				<nav>
@@ -114,18 +114,18 @@ a.header-tel{border:3px solid #ffd02c;
 			</script>
 				<div id="layerslider_1_1" class="ls-wp-container" style="width:1030px;height:514px;margin:0 auto;margin-bottom: 0px;">
 					<div class="ls-slide" data-ls=" transition2d: all;">
-						<img src="images/slider00.png" class="ls-bg" alt="slider00" />
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:1000;" src="images/slider01.png" alt="">
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:2000;" src="images/slider02.png" alt="">
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:3000;" src="images/slider03.png" alt="">
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:4200;" src="images/slider04.png" alt="">
+						<img src="images/slider00.png" class="ls-bg" alt="에이플러스퀵" />
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:1000;" src="images/slider01.png" alt="빠른팍업">
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:2000;" src="images/slider02.png" alt="카드결제가능 부가세별도">
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:3000;" src="images/slider03.png" alt="야간퀵 24시퀵 365일퀵">
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:4200;" src="images/slider04.png" alt="캐시백">
 					</div>
 					<div class="ls-slide" data-ls=" transition2d: all;">
-						<img src="images/slider00.png" class="ls-bg" alt="slider00" />
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:1000;" src="images/slider01.png" alt="">
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:2000;" src="images/slider02.png" alt="">
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:3000;" src="images/slider03.png" alt="">
-						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:4200;" src="images/slider04.png" alt="">
+						<img src="images/slider00.png" class="ls-bg" alt="에이플러스퀵" />
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:1000;" src="images/slider01.png" alt="빠른팍업">
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:2000;" src="images/slider02.png" alt="카드결제가능 부가세별도">
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:3000;" src="images/slider03.png" alt="야간퀵 24시퀵 365일퀵">
+						<img class="ls-l" style="top:0px;left:0px;white-space: nowrap;" data-ls="delayin:4200;" src="images/slider04.png" alt="캐시백">
 					</div>
 				</div>
 			</div>
@@ -133,28 +133,28 @@ a.header-tel{border:3px solid #ffd02c;
 			<div class="front-table">
 				<div>
 					<a href="sub/sub02.html" title="오토바이 퀵서비스 ">
-						<img src="images/bike-icon.png" />
+						<img src="images/bike-icon.png" alt="오토바이퀵" />
 						<h4 class="table-h5">오토바이 퀵서비스</h4>
 						<p class="table-desc">근거리에서 1~2시간내 배송하는 가장 일반적인 서비스입니다.</p>
 					</a>
 				</div>
 				<div>
-					<a href="sub/sub03.html" title="차량 퀵서비스 ">
-						<img src="images/truck-icon.png" />
+					<a href="sub/sub03.html" title="다마스,라보,차량 퀵서비스 ">
+						<img src="images/truck-icon.png" alt="다마스,라보,용달 차량퀵"/>
 						<h4 class="table-h5">차량 퀵서비스</h4>
 						<p class="table-desc">오토바이로 배송이 어려운 물품 또는 장거리 배송에 적합한 서비스입니다.</p>
 					</a>
 				</div>
 				<div>
 					<a href="sub/sub04.html" title="전국당일특급연계배송 ">
-						<img src="images/rocket-icon.png" />
+						<img src="images/rocket-icon.png" alt=""고속버스퀵, 터미널퀵 대행/>
 						<h4 class="table-h5">전국당일특급연계배송</h4>
 						<p class="table-desc">장거리 일 경우 가장 빠른 서비스로 최대 4~7시간이 소요됩니다.</p>
 					</a>
 				</div>
 				<div>
 					<a href="sub/sub05.html" title="고객센터 ">
-						<img src="images/call-icon.png" />
+						<img src="images/call-icon.png" alt="퀵서비스 상담 안내"/>
 						<h4 class="table-h5">고객센터</h4>
 						<p class="table-desc">365일 24시간 상담 가능합니다. 자세한 요금은 전화로 문의 바랍니다.</p>
 					</a>
